--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "brijishadoshi"
+  },
+  "targets": {
+    "brijishadoshi": {
+      "hosting": {
+        "textutil": [
+          "textutil"
+        ]
+      }
+    }
   }
 }
